--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./output.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
 </head>
 <body>
-    
+    <nav class="container relative mx-auto p-6">
+        <div class="flex  items-center justify-between space-x-20 my-6 space-y-0">
+            <!-- logo section -->
+        <div class="z-30">
+            <div><img src="./images/logo-bookmark.svg" alt=""></div>
+        </div>
+        <!-- nav content -->
+        <div class=" sm-hidden imd-flex items-center space-x-10   text-grayishBlue">
+            <a href="" class="-tracking-wider hover:text-softRed">FEATURES</a>
+            <a href="" class="-tracking-wider  hover:text-softRed">PRICING</a>
+            <a href="" class="-tracking-wider  hover:text-softRed">CONTACT</a>
+            <a href="" class="px-8 py-2 text-white bg-softRed rounded-lg shawdow-md hover:text-softRed hover:bg-white ">LOGIN</a>
+        </div>
+        <div  >
+            <button id="menu-btn" class="z-30 sm:block focus:outline-none md:hidden hamburger">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle" ></span>
+                <span class="hamburger-bottom"></span>
+            </button>
+        </div>
+    </div>
+    </nav>
+
 </body>
 </html>
+
+<script></script>
