just added some tailwind propoerties to make page suitable for small and large screens

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="output.css" rel="stylesheet">
 </head>
-<body class="md:mx-40" >
-    <nav class="container relative mx-auto p-6 ">
+<body class="  md:mx-40" >
+    <nav class="container relative mx-auto pt-6 ">
         <div class="flex  items-center justify-between space-x-20 my-6 space-y-0">
             <!-- logo section -->
         <div class="z-30">
@@ -34,28 +34,28 @@
     </nav>
     <!-- hero section -->
      <section id="hero">
-     <div class="container flex flex-col-reverse m-auto p-6 lg:flex-row lg:mb-0 lg:items-center justify-between">
+     <div class="container mx-auto p-1 flex flex-col-reverse   items-center   lg:flex-row lg:mb-0 lg:items-center justify-between">
         <!-- content section -->
-         <div class="  w-1/2">
-        <div class="w-96"> <h1 class=" text-4xl font-sans font-semibold py-6 mx-auto">A Simple Bookmark Manager</h1></div>
-         <p class="text-lg text-grayishBlue  py-6 mx-auto">A clean and simple interface to organize your favourite websites.Open a new browser tab and see your sites load instantly.Try it for free.</p>
+         <div class="  lg:w-1/2">
+        <div class=" lg:w-96"> <h1 class="  text-center lg:text-start text-3xl lg:text-4xl font-sans font-semibold py-5 mx-auto">A Simple Bookmark Manager</h1></div>
+        <div class=" lg:mr-4"> <p class=" text-s lg:text-lg text-center text-grayishBlue lg:text-start py-6 mx-auto">A clean and simple interface to organize your favourite websites.Open a new browser tab and see your sites load instantly.Try it for free.</p></div>
          <!-- buttons section -->
-          <div class="flex  ">
+          <div class="flex justify-center lg:flex lg:justify-start">
             <a href="" class="text-white rounded bg-softBlue p-4 m-0.5 font-semibold text-sm shadow-md   hover:bg-white hover:border-softBlue hover:text-gray-800">Get it on Chrome</a>
             <a href=" " class="text-gray-800 hover:bg-softBlue rounded m-0.5 hover:text-white p-4 font-semibold text-sm shadow-md ">Get it on Firefox</a>
           </div>
          </div>
          <!-- img section -->
-          <div class=" w-1/2">
+          <div class=" lg:w-1/2 lg:mt-4 lg:mb-0 relative mx-auto  ">
             <div><img src="./images/illustration-hero.svg" alt=""></div>
           </div>
      </div>
 
     </section>
     <section id="features">
-        <div class="mx-auto  mt-24   items-center  w-1/2  flex flex-col text-center">
+        <div class="mx-auto  p-1  lg:mt-22 mt-20   items-center  lg:w-1/2  flex flex-col text-center">
             <h1 class="text-2xl my-2 justify-center font-semibold">Features</h1>
-            <p class="text-lg text-grayishBlue  py-4 mx-auto">Our aim is to make it quick and easy for you to access your favourite websites.Your bookmarks sync between your devices so you can access them to go.</p>
+            <p class=" text-s  lg:text-lg text-center text-grayishBlue  py-6 mx-auto">Our aim is to make it quick and easy for you to access your favourite websites.Your bookmarks sync between your devices so you can access them to go.</p>
         
         </div>
 
