--- a/index.html
+++ b/index.html
@@ -127,6 +127,75 @@
 
         </div>
       </section>
+
+  <!-- FAQ heading   -->
+  <section id="faq">
+
+    <div class="container mx-auto px-6">
+      <h2 class=" mb-6 text-3xl font-semibold text-center md:text-4xl">Frequently asked questions</h2>
+      <p class="max-w-lg mx-auto text-center text-grayishBlue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, sapiente deleniti facere in hic tenetur exercitationem repellendus est doloribus eveniet.</p>
+    </div>
+   </section>
+
+<section id="faq-accordion">
+  <!-- main container  -->
+   <div class="container mx-auto mb-32">
+
+    <!-- accordion container  -->
+     <div class="max-w-2xl m-8 mx-auto overflow-hidden">
+
+
+      <!-- tab 1 -->
+
+        <div class="py-1 border-b outline-none group" tabindex="1">
+
+            <!-- tab flex container  -->
+             <div class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease">
+              <!-- tab title  -->
+               <div class="transition duration-500 ease group-hover:text-red-500">
+                what is Bookmark
+               </div>
+               <!-- arrow  -->
+                <div class="transition duration-500 ease group-focus:-rotate-180 ">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>
+                </div>
+             </div>
+              <!-- tab inner content   -->
+           <div class="overflow-hidden transition duration-500 ease group-focus:max-h-screen max-h-0">
+            <p class="py-2 text-justify text-gray-400">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, id eaque? Modi dolores aliquid mollitia accusantium qui voluptates, sint voluptatem adipisci quaerat laudantium veniam autem neque necessitatibus maxime! Cupiditate fugiat accusamus aspernatur, aliquid vitae blanditiis, nobis beatae reiciendis ex nemo ratione earum doloremque reprehenderit veniam voluptatibus doloribus corporis aperiam molestiae!</p>
+           </div> 
+          </div>
+
+          <!-- tab-2  -->
+          <div class="py-1 border-b outline-none group" tabindex="2">
+
+            <!-- tab flex container  -->
+             <div class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease">
+              <!-- tab title  -->
+               <div class="transition duration-500 ease group-hover:text-red-500">
+                is there a mobile app
+               </div>
+               <!-- arrow  -->
+                <div class="transition duration-500 ease group-focus:-rotate-180 ">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>
+                </div>
+             </div>
+              <!-- tab inner content   -->
+           <div class="overflow-hidden transition duration-500 ease group-focus:max-h-screen max-h-0">
+            <p class="py-2 text-justify text-gray-400">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, id eaque? Modi dolores aliquid mollitia accusantium qui voluptates, sint voluptatem adipisci quaerat laudantium veniam autem neque necessitatibus maxime! Cupiditate fugiat accusamus aspernatur, aliquid vitae blanditiis, nobis beatae reiciendis ex nemo ratione earum doloremque reprehenderit veniam voluptatibus doloribus corporis aperiam molestiae!</p>
+           </div> 
+          </div>
+     </div>
+
+
+     
+</div>
+          
+
+   </div>
+
+</section>
+
 </body>
 </html>
 
